--- a/portfolio.css
+++ b/portfolio.css
@@ -4,6 +4,7 @@ body{
   letter-spacing: 1px;
   background-image: url("C:/xampp/htdocs/portfolio/img/b065.gif");
   word-break: break-all;
+  
 }
 
 ul,li{
@@ -22,24 +23,24 @@ ul,li a:hover{
 
 /* ヘッダー */
 .label a{
-  font-size: 80px;
+  font-size: 100px;
   font-family: 'Fredericka the Great', cursive;
-  margin-left: 65%;
-  white-space: nowrap;
   color: black;
   display: inline-block;
   display: block;
   text-decoration: none;
+  
 }
 #header {
-  width: 99%;
-  height: 52%;
+  background-size: auto 100%;
+  height: 480px;
   background-image: url("C:/xampp/htdocs/portfolio/img/textile-2918844_1920.jpg");
-  padding: 0;
   display: flex;
-  background-size: auto;
   align-items: center;
-  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -49,8 +50,7 @@ ul,li a:hover{
   
   padding: 10px;
   font-family: 'Annie Use Your Telescope', cursive;
-  left: 50%;
-  
+  z-index: 100;
 }
 
 #sitenavi1 ul{
@@ -59,10 +59,8 @@ ul,li a:hover{
   justify-content: center;
   justify-content: space-around;
   background-color: aliceblue;
-  margin-top: 26%;
-  margin-left: 10%;
-  width: 80%;
-  
+  width: 100%;
+  padding: 0%;
 }
 
 #sitenavi1 li{
@@ -99,28 +97,14 @@ ul,li a:hover{
 }
 
 
-/* プロフィール */
+/* インナー */
 .section .inner{
   padding: 100px ;
+  
 }
 
-.section .inner1{
-  margin-left: -400px;
-  margin-top: 200px;
-}
-.section .inner2{
-  margin-left: 400px;
-  margin-top: 150px;
-}
-.section .inner3{
-  margin-left: -400px;
-  margin-top: 150px;
-}
-.section .inner4{
-  margin-left: 400px;
-  margin-top: 150px;
-  letter-spacing: 10px;
-}
+/* タイトルのスタイル */
+
 
 .section-title  h1,h2,h3,h4{
   letter-spacing: 7px;
@@ -128,35 +112,43 @@ ul,li a:hover{
   box-shadow: 0 0 3px rgba(0,0,0,0.3);
   border-right: 2px dotted rgba(0,0,0,.1);
   border-left: 2px dotted rgba(0,0,0,.1);
+  display: inline-block;
 }
+
 
 .section-title h1 {
   width: 350px;
   text-align: center;
   font-size: 45px;
   font-family: 'Lexend Giga', sans-serif;
-  margin-left: 800px;
-  margin-bottom: -20px;
+  margin-left: 12%;
+  margin-top: 5%;
   transform: rotate(5deg);
-
+  margin-bottom: -7%;
+  position: relative;
+  z-index: 5;
 }
 .section-title h2 {
   width: 300px;
   text-align: center;
   font-size: 45px;
   font-family: 'Lexend Giga', sans-serif;
-  margin-left: 800px;
-  margin-bottom: -20px;
+  margin-left: 70%;
+  margin-bottom: -5%;
   transform: rotate(-5deg);
+  z-index: 5;
+  position: relative;
 }
 .section-title h3 {
   width: 500px;
   text-align: center;
   font-size: 45px;
   font-family: 'Lexend Giga', sans-serif;
-  margin-left: 700px;
+  margin-left: 3%;
   margin-bottom: -20px;
   transform: rotate(5deg);
+  z-index: 5;
+  position: relative;
 }
 .section-title h4 {
   width: 350px;
@@ -166,11 +158,15 @@ ul,li a:hover{
   margin-left: 750px;
   margin-bottom: -20px;
   transform: rotate(-5deg);
+  z-index: 5;
+  position: relative;
+  margin-left: 67%;
 }
 
-.section-box {
-  width: 80%;
+/* ボックスのスタイル */
+.section-box1 {
   display: flex;
+  width: 80%;
   justify-content: space-between;
   padding: 50px;
   width: 500px;
@@ -182,18 +178,75 @@ ul,li a:hover{
   , linear-gradient(180deg, hsla(60, 100%, 75%,1), hsla(60, 100%, 75%, 1));
   font-size: 1.125rem;
   line-height: 1.8;
-  margin-left: 650px;
+  position: relative;
+  left: 5%;
+  z-index: 3;
 }
 
+.section-box2 {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 .25rem .25rem hsla(0, 0%, 0%, .1);
+  background-image:
+    linear-gradient(180deg, hsla(0, 0%, 45%, .1) 2rem, hsla(0, 100%, 100%, 0) 2.5rem)
+  , linear-gradient(180deg, hsla(60, 100%, 75%,1), hsla(60, 100%, 75%, 1));
+  font-size: 2px;
+  line-height: 1.8;
+  position: relative;
+  left: 60%;
+  z-index: 3;
+}
+
+.section-box3 {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  padding: 50px;
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 .25rem .25rem hsla(0, 0%, 0%, .1);
+  background-image:
+    linear-gradient(180deg, hsla(0, 0%, 45%, .1) 2rem, hsla(0, 100%, 100%, 0) 2.5rem)
+  , linear-gradient(180deg, hsla(60, 100%, 75%,1), hsla(60, 100%, 75%, 1));
+  font-size: 1.125rem;
+  line-height: 1.8;
+  position: relative;
+  z-index: 3;
+}
+.section-box4 {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  padding: 50px;
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  box-shadow: 0 .25rem .25rem hsla(0, 0%, 0%, .1);
+  background-image:
+    linear-gradient(180deg, hsla(0, 0%, 45%, .1) 2rem, hsla(0, 100%, 100%, 0) 2.5rem)
+  , linear-gradient(180deg, hsla(60, 100%, 75%,1), hsla(60, 100%, 75%, 1));
+  font-size: 1.125rem;
+  line-height: 1.8;
+  position: relative;
+  z-index: 3;
+  left: 60%;
+}
+
+/* ボックスの中身 */
 .section-plot{
   width: 100%;
+  
 }
 
 .section-plot p1 {
   font-size: 20px;
   font-family: 'Yusei Magic', sans-serif;
   font-weight: 500;
-  
   letter-spacing: 3px;
 }
 .section-plot p2 {
@@ -210,34 +263,34 @@ ul,li a:hover{
   font-weight: 500;
   letter-spacing: 1px;
 }
-
+/* イメージ */
 .img-profile{
   width: 30%;
   height: 50%;
   position:absolute;
-  top: 90%;
-  left: 60%;
+  margin-top: 200px;
+  margin-left: 1000px;
 }
 .img-skill{
   width: 30%;
   height: 40%;
   position:absolute;
-  top: 170%;
-  left: 15%;
+  margin-top: 200px;
+  margin-left: 200px;
 }
 .img-application{
   width: 30%;
   height: 60%;
   position:absolute;
-  top: 255%;
-  left: 60%;
+  margin-top: 250px;
+  margin-left: 1000px;
 }
 .img-contact{
   width: 30%;
   height: 50%;
   position:absolute;
-  top: 325%;
-  left: 15%;
+  margin-top: 200px;
+  margin-left: 200px;
 }
 
 .fa-rotate-30 {
@@ -262,3 +315,10 @@ ul,li a:hover{
   text-align: center;
 }
 
+
+@media screen and (max-width: 959px) {
+	/* 959px以下に適用されるCSS（タブレット用） */
+}
+@media screen and (max-width: 480px) {
+	/* 480px以下に適用されるCSS（スマホ用） */
+}
